force-app/main/default/objects/Clarity360Config__mdt/Clarity360Config__mdt.object-meta.xml
<CustomObject>
    <description>Runtime switches and thresholds for Clarity360 scanners.</description>
    <label>Clarity360 Config</label>
    <pluralLabel>Clarity360 Configs</pluralLabel>
</CustomObject>