force-app/main/default/objects/Clarity360Config__mdt/fields/ApexCoverageThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>ApexCoverageThresholdPct__c</fullName>
    <description>Coverage threshold percent for Apex class risk scoring.</description>
    <label>Apex Coverage Threshold Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>