force-app/main/default/objects/Clarity360Config__mdt/fields/EnableApexCoverageScan__c.field-meta.xml
<CustomField>
    <fullName>EnableApexCoverageScan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable global Apex class test coverage recommendations.</description>
    <label>Enable Apex Coverage Scan</label>
    <type>Checkbox</type>
</CustomField>