force-app/main/default/objects/Clarity360Config__mdt/fields/EnableFieldRecommendations__c.field-meta.xml
<CustomField>
    <fullName>EnableFieldRecommendations__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable recommendations derived from field usage and null-rate signals.</description>
    <label>Enable Field Recommendations</label>
    <type>Checkbox</type>
</CustomField>