force-app/main/default/objects/Clarity360Config__mdt/fields/EnableFlowAndProcessScan__c.field-meta.xml
<CustomField>
    <fullName>EnableFlowAndProcessScan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable global flow and process builder status recommendations.</description>
    <label>Enable Flow And Process Scan</label>
    <type>Checkbox</type>
</CustomField>