force-app/main/default/objects/Clarity360Config__mdt/fields/EnableTriggerScan__c.field-meta.xml
<CustomField>
    <fullName>EnableTriggerScan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable global trigger status recommendations.</description>
    <label>Enable Trigger Scan</label>
    <type>Checkbox</type>
</CustomField>