force-app/main/default/objects/Clarity360Config__mdt/fields/EnableValidationRuleScan__c.field-meta.xml
<CustomField>
    <fullName>EnableValidationRuleScan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable global validation rule status recommendations.</description>
    <label>Enable Validation Rule Scan</label>
    <type>Checkbox</type>
</CustomField>