force-app/main/default/objects/Clarity360Config__mdt/fields/EnableWorkflowRuleScan__c.field-meta.xml
<CustomField>
    <fullName>EnableWorkflowRuleScan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable global workflow rule status recommendations.</description>
    <label>Enable Workflow Rule Scan</label>
    <type>Checkbox</type>
</CustomField>