force-app/main/default/objects/Clarity360Config__mdt/fields/MaxInventoryObjects__c.field-meta.xml
<CustomField>
    <fullName>MaxInventoryObjects__c</fullName>
    <description>Maximum objects included in a single inventory refresh.</description>
    <label>Max Inventory Objects</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>