force-app/main/default/objects/Clarity360Config__mdt/fields/MaxScanObjects__c.field-meta.xml
<CustomField>
    <fullName>MaxScanObjects__c</fullName>
    <description>Maximum objects included in a single usage scan batch run.</description>
    <label>Max Scan Objects</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>