force-app/main/default/objects/Clarity360Config__mdt/fields/MaxToolingRows__c.field-meta.xml
<CustomField>
    <fullName>MaxToolingRows__c</fullName>
    <description>Maximum metadata rows fetched per Tooling API scan.</description>
    <label>Max Tooling Rows</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>