force-app/main/default/objects/Clarity360Config__mdt/fields/MinObjectRecordCount__c.field-meta.xml
<CustomField>
    <fullName>MinObjectRecordCount__c</fullName>
    <description>Minimum object record count before empty-field deprecate recommendations are allowed.</description>
    <label>Min Object Record Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>