force-app/main/default/objects/Clarity360Config__mdt/fields/SamplingLimit__c.field-meta.xml
<CustomField>
    <fullName>SamplingLimit__c</fullName>
    <description>Maximum records sampled per object during usage scans.</description>
    <label>Sampling Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>